tests/snapshots/trace_solver@5597655629449356732.snap
---
source: tests/trace_solver.rs
info:
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: true
    inherited_ref_on_ref: EatInner
    fallback_to_outer: true
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    downgrade_mut_inside_shared: true
    eat_mut_inside_shared: true
    ref_binding_on_inherited: ResetBindingMode
    mut_binding_on_inherited: Error
    always_inspect_bm: false
  bundle_name: ergo2024
  request: "&[x]: &[&mut T]"
---
&[x] @ s: &[&mut T]
// Applying rule `Deref(EatOuter)`
[x] @ *s: [&mut T]
// Applying rule `Constructor`
x @ (*s).0: &mut T
// Applying rule `Binding`
let x: &mut T = (*s).0

// Final bindings (simplified):
let x: &mut T = (*s).0; // Borrow-check error: CantCopyRefMut
